Add possible fixes for the testcase failures in windows